[JXT-50] - Update libs for 1.2.1 release
[JXT-51] - In BasicParserPool, avoid throwing an EmptyStackException on empty cache case
[JXT-52] - New ParserPool implementation that eliminates most locking by forgoing support for versioning and property mods over time
[JXT-54] - Method add(index, element) for a subList (e.g. of a choicegroup) only append element.
[JXT-56] - XMLHelper erroneously creating DOM Attribute with Document createAttribute rather than createAttributeNS
[JXT-57] - Deprecate SecurityHelperTest class in favor of moving methods over to main SecurityHelper class
[JXT-59] - Add additional helper methods to XMLHelper to assist with more complex attribute marshalling and unmarshalling cases
[JXT-61] - Provide support for cloning an XMLObject via a helper utility method

Changes in Release 1.2
==============================================
[JXT-43] - Add some additional security related helper methods
[JXT-44] - Optimize use of Collections 

Changes in Release 1.1.1
==============================================
Updated logging libraries in order to grab some bug fixes


Changes in Release 1.1.0
==============================================
[JXT-7]  - Support extraction of certificate URI subject alt names which have non-URL values
[JXT-31] - Add BaseXMLObjectMarshaller and BaseXMLObjectUnmarshaller classes that provide no-op implementations of the 
           methods on the AbstractXMLObjectMarshaller and AbstractXMLObjectUnmarshaller classes.
[JXT-32] - XMLHelper adoptElement should check success of node adoption
[JXT-34] - Upgrade to Apache XML Security lib 1.4.2
[JXT-35] - Upgrade to SLF4J 1.5.2
[JXT-36] - Upgrade to Bouncy Castle 1.40
[JXT-37] - NPE is thrown if X509KeyInfoGeneratorFactory is set to emit certs or CRLs but none are present in the generator
[JXT-38] - XMLHelper.prettyPrintXML write the entire document not just the node passed in as an argument